--- a/ThinkerBell/presentation/src/main/res/layout/fragment_contacts.xml
+++ b/ThinkerBell/presentation/src/main/res/layout/fragment_contacts.xml
@@ -16,6 +16,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
+            android:id="@+id/iv_home_logo"
             android:layout_width="22dp"
             android:layout_height="17dp"
             android:layout_gravity="start|center_vertical"
