--- a/ThinkerBell/presentation/src/main/res/layout/dialog_keyword_delete.xml
+++ b/ThinkerBell/presentation/src/main/res/layout/dialog_keyword_delete.xml
@@ -28,11 +28,11 @@
         android:layout_width="124dp"
         android:layout_height="42dp"
 
-        app:layout_constraintTop_toBottomOf="@id/tv_dialog_contact_title"
+        app:layout_constraintTop_toBottomOf="@id/tv_dialog_title"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintVertical_bias="1"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/btn_dialog_contact_call"
+        app:layout_constraintEnd_toStartOf="@id/btn_dialog_delete"
         app:layout_constraintHorizontal_chainStyle="packed"
         android:layout_marginEnd="8dp"
 
@@ -50,10 +50,10 @@
         android:layout_width="124dp"
         android:layout_height="42dp"
 
-        app:layout_constraintTop_toBottomOf="@id/tv_dialog_contact_title"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toTopOf="@id/btn_dialog_cancel"
+        app:layout_constraintBottom_toBottomOf="@id/btn_dialog_cancel"
         app:layout_constraintVertical_bias="1"
-        app:layout_constraintStart_toEndOf="@id/btn_dialog_contact_copy"
+        app:layout_constraintStart_toEndOf="@id/btn_dialog_cancel"
         app:layout_constraintEnd_toEndOf="parent"
 
         android:background="@drawable/shape_dialog_contact_btn_bg"
