--- a/ThinkerBell/presentation/src/main/res/layout/fragment_home.xml
+++ b/ThinkerBell/presentation/src/main/res/layout/fragment_home.xml
@@ -40,7 +40,7 @@
             android:layout_gravity="end|center_vertical"
             android:layout_marginEnd="16dp"
             android:contentDescription="@null"
-            android:src="@drawable/ic_topbar_bell_badge" />
+            android:src="@drawable/ic_topbar_bell" />
     </androidx.appcompat.widget.Toolbar>
 
     <com.google.android.material.tabs.TabLayout
