--- a/ThinkerBell/presentation/src/main/res/layout/fragment_setting.xml
+++ b/ThinkerBell/presentation/src/main/res/layout/fragment_setting.xml
@@ -11,15 +11,19 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/primary1"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        tools:layout_editor_absoluteX="0dp">
 
         <ImageView
+            android:id="@+id/iv_home_logo"
             android:layout_width="22dp"
-            android:layout_height="18dp"
+            android:layout_height="17dp"
+            android:layout_gravity="start|center_vertical"
+            android:layout_marginStart="26dp"
             android:contentDescription="@null"
             android:src="@drawable/ic_thinkerbell_logo" />
     </Toolbar>
-    
+
     <TextView
         android:id="@+id/tv_setting_title"
         android:layout_width="match_parent"
