🔨️ 바텀 내비게이션 마이 페이지 아이콘 -> 즐겨찾기 아이콘 변경

--- a/ThinkerBell/presentation/src/main/res/menu/bottom_navigation_menu.xml
+++ b/ThinkerBell/presentation/src/main/res/menu/bottom_navigation_menu.xml
@@ -13,7 +13,8 @@
         android:title="공지" />
     <item
         android:id="@+id/navigation_my_page"
-        android:icon="@drawable/ic_underbar_profile_2"
+        android:icon="@drawable/ic_clipping_outline"
+        android:iconTint="@color/gray_898989"
         android:title="즐겨찾기" />
     <item
         android:id="@+id/navigation_setting"
