--- a/ThinkerBell/presentation/src/main/res/layout/fragment_favorite_notice.xml
+++ b/ThinkerBell/presentation/src/main/res/layout/fragment_favorite_notice.xml
@@ -1,14 +1,79 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/primary2">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rv_notice_list"
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:background="@color/primary1"
+        app:contentInsetStart="0dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <ImageView
+            android:id="@+id/iv_home_logo"
+            android:layout_width="22dp"
+            android:layout_height="17dp"
+            android:layout_gravity="start|center_vertical"
+            android:layout_marginStart="26dp"
+            android:contentDescription="@null"
+            android:src="@drawable/ic_thinkerbell_logo" />
+    </androidx.appcompat.widget.Toolbar>
+
+
+    <TextView
+        android:id="@+id/tv_favorite_notices"
+        style="@style/Label_XL"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:listitem="@layout/item_notice" />
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:background="@color/primary1"
+        android:gravity="center"
+        android:paddingBottom="10dp"
+        android:text="즐겨찾기한 공지사항"
+        android:textColor="@color/primary2"
+        app:layout_constraintBottom_toTopOf="@id/tl_favorite_categoryTab"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/toolbar" />
 
+
+    <com.google.android.material.tabs.TabLayout
+        android:id="@+id/tl_favorite_categoryTab"
+        style="@style/Label_Medium"
+        android:layout_width="0dp"
+
+        android:layout_height="60dp"
+        android:background="@color/primary1"
+
+        android:paddingVertical="14dp"
+
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tv_favorite_notices"
+
+        app:tabIndicator="@drawable/category_tab_indicator_home"
+        app:tabIndicatorColor="@color/primary2"
+        app:tabIndicatorFullWidth="false"
+        app:tabIndicatorGravity="bottom"
+        app:tabMode="scrollable"
+        app:tabSelectedTextColor="@color/primary2"
+        app:tabTextAppearance="@style/TabTextStyle"
+        app:tabTextColor="#BABABA" />
+
+    <androidx.viewpager2.widget.ViewPager2
+        android:id="@+id/vp_favorite_notice"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tl_favorite_categoryTab" />
 </androidx.constraintlayout.widget.ConstraintLayout>
 
