--- a/ThinkerBell/presentation/src/main/res/layout/fragment_my_page.xml
+++ b/ThinkerBell/presentation/src/main/res/layout/fragment_my_page.xml
@@ -9,7 +9,8 @@
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="58dp"
+        android:paddingTop="6dp"
         android:background="@color/primary1"
         app:contentInsetStart="0dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -18,10 +19,9 @@
 
         <ImageView
             android:id="@+id/iv_home_logo"
-            android:layout_width="22dp"
-            android:layout_height="17dp"
-            android:layout_gravity="start|center_vertical"
-            android:layout_marginStart="26dp"
+            android:layout_width="28dp"
+            android:layout_height="22dp"
+            android:layout_gravity="center"
             android:contentDescription="@null"
             android:src="@drawable/ic_thinkerbell_logo" />
     </androidx.appcompat.widget.Toolbar>
@@ -31,34 +31,46 @@
         android:id="@+id/tv_my_page"
         style="@style/Label_XL"
         android:layout_width="match_parent"
-        android:layout_height="98dp"
+        android:layout_height="70dp"
         android:layout_gravity="center"
         android:background="@color/primary1"
         android:gravity="center"
-        android:paddingBottom="52dp"
-        android:text="나의 공지"
+        android:paddingBottom="28dp"
+        android:text="즐겨찾기"
         android:textColor="@color/primary2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/toolbar" />
 
     <TextView
-        android:id="@+id/tv_favorite_notices"
+        android:id="@+id/tv_favorite_schedules"
         style="@style/Label_Medium"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="25dp"
-        android:layout_marginTop="20dp"
-        android:text="즐겨찾기한 공지사항"
+        android:layout_marginTop="34dp"
+        android:text="즐겨찾기한 학사일정"
         android:textColor="@color/primary3"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tv_my_page" />
 
-    <ImageButton
-        android:id="@+id/ib_page_right_favorite"
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:text="일정 당일에 알림을 보내드려요!"
+        style="@style/Pretendard_Text_Light"
+        android:textColor="@color/content_secondary"
+        android:layout_marginEnd="12dp"
+        app:layout_constraintEnd_toStartOf="@id/ib_page_right_schedules"
+        app:layout_constraintTop_toTopOf="@id/ib_page_right_schedules"
+        app:layout_constraintBottom_toBottomOf="@id/ib_page_right_schedules"/>
+
+
+    <ImageButton
+        android:id="@+id/ib_page_right_schedules"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="34dp"
         android:layout_marginEnd="24dp"
         android:background="@null"
         android:src="@drawable/ic_direaction_right_1"
@@ -67,91 +79,61 @@
         app:layout_constraintTop_toBottomOf="@id/tv_my_page" />
 
     <View
+        android:id="@+id/divider2"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_marginTop="22dp"
+        android:background="@color/red_gray_700"
+        app:layout_constraintTop_toBottomOf="@id/tv_favorite_schedules" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_my_page_favorite_schedule"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/divider2"
+        tools:itemCount="3"
+        tools:listitem="@layout/item_favorite_schedule" />
+
+    <TextView
+        android:id="@+id/tv_favorite_notices"
+        style="@style/Label_Medium"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="25dp"
+        android:layout_marginTop="64dp"
+        android:text="즐겨찾기한 공지사항"
+        android:textColor="@color/primary3"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/rv_my_page_favorite_schedule" />
+
+    <ImageButton
+        android:id="@+id/ib_page_right_notices"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="64dp"
+        android:layout_marginEnd="24dp"
+        android:background="@null"
+        android:src="@drawable/ic_direaction_right_1"
+        app:tint="@color/red_gray_700"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/rv_my_page_favorite_schedule" />
+
+    <View
         android:id="@+id/divider"
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="22dp"
         android:background="@color/red_gray_700"
         app:layout_constraintTop_toBottomOf="@id/tv_favorite_notices" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rv_my_page_favorite"
+        android:id="@+id/rv_my_page_favorite_notice"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@id/divider"
         tools:itemCount="3"
         tools:listitem="@layout/item_my_notice" />
 
-    <TextView
-        android:id="@+id/tv_keyword_management"
-        style="@style/Label_Medium"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="25dp"
-        android:layout_marginTop="34dp"
-        android:text="키워드 관리"
-        android:textColor="@color/primary3"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/rv_my_page_favorite" />
-
-    <ImageButton
-        android:id="@+id/ib_page_right_keyword"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="34dp"
-        android:layout_marginEnd="24dp"
-        android:background="@null"
-        android:src="@drawable/ic_direaction_right_1"
-        app:tint="@color/red_gray_700"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/rv_my_page_favorite" />
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rv_my_page_keyword"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="28dp"
-        android:layout_marginTop="20dp"
-        android:orientation="horizontal"
-        android:scrollbars="horizontal"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tv_keyword_management"
-        tools:itemCount="1"
-        tools:listitem="@layout/item_my_page_keyword"
-        tools:orientation="horizontal" />
-
-    <ImageView
-        android:id="@+id/iv_setting"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="27dp"
-        android:layout_marginTop="49dp"
-        android:src="@drawable/ic_setting"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/rv_my_page_keyword" />
-
-    <TextView
-        android:id="@+id/tv_alarm"
-        style="@style/Label_Medium"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="25dp"
-        android:layout_marginTop="31dp"
-        android:text="알림"
-        android:textColor="@color/primary3"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/iv_setting" />
-
-    <androidx.appcompat.widget.SwitchCompat
-        android:id="@+id/tb_alarm"
-        android:layout_width="56dp"
-        android:layout_height="32dp"
-        android:layout_marginTop="27dp"
-        android:layout_marginEnd="25dp"
-        android:background="@null"
-        style="@style/alarm_toggle"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/iv_setting" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
 
