--- a/ThinkerBell/presentation/src/main/res/layout/fragment_favorite_schedule.xml
+++ b/ThinkerBell/presentation/src/main/res/layout/fragment_favorite_schedule.xml
@@ -1,6 +1,111 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/primary2">
 
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:background="@color/primary1"
+        app:contentInsetStart="0dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <ImageView
+            android:id="@+id/iv_home_logo"
+            android:layout_width="22dp"
+            android:layout_height="17dp"
+            android:layout_gravity="start|center_vertical"
+            android:layout_marginStart="26dp"
+            android:contentDescription="@null"
+            android:src="@drawable/ic_thinkerbell_logo" />
+    </androidx.appcompat.widget.Toolbar>
+
+
+    <TextView
+        android:id="@+id/tv_favorite_schedules"
+        style="@style/Label_XL"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:background="@color/primary1"
+        android:gravity="center"
+        android:paddingBottom="10dp"
+        android:text="즐겨찾기한 학사일정"
+        android:textColor="@color/primary2"
+        app:layout_constraintBottom_toTopOf="@id/v_field"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/toolbar" />
+
+
+    <View
+        android:id="@+id/v_field"
+        style="@style/Label_Medium"
+        android:layout_width="0dp"
+
+        android:layout_height="60dp"
+        android:background="@color/primary1"
+
+        android:paddingVertical="14dp"
+
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tv_favorite_schedules" />
+
+    <ImageButton
+        android:id="@+id/ib_left_arrow"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
+        android:src="@drawable/ic_direaction_left_1"
+        android:background="@color/transparent"
+        app:tint="@color/primary2"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@id/tv_year"
+        app:layout_constraintBottom_toBottomOf="@id/tv_year"
+        android:layout_marginStart="24dp"
+        android:visibility="gone"
+        tools:ignore="ContentDescription" />
+
+    <TextView
+        android:id="@+id/tv_year"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        tools:text="2024"
+        style="@style/Pretendard_Text"
+        android:textColor="@color/primary2"
+        app:layout_constraintTop_toTopOf="@id/v_field"
+        app:layout_constraintBottom_toBottomOf="@id/v_field"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
+
+    <ImageButton
+        android:id="@+id/ib_right_arrow"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
+        android:src="@drawable/ic_direaction_right_1"
+        android:background="@color/transparent"
+        app:tint="@color/primary2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@id/tv_year"
+        app:layout_constraintBottom_toBottomOf="@id/tv_year"
+        android:layout_marginEnd="24dp"
+        android:visibility="gone"
+        tools:ignore="ContentDescription" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_favorite_schedule"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/v_field" />
 </androidx.constraintlayout.widget.ConstraintLayout>
+
