--- a/ThinkerBell/presentation/src/main/res/layout/fragment_error_report.xml
+++ b/ThinkerBell/presentation/src/main/res/layout/fragment_error_report.xml
@@ -67,14 +67,16 @@
         app:layout_constraintTop_toBottomOf="@id/tv_subtitle_report"
         android:layout_marginTop="12dp"
 
+        android:imeOptions="actionDone"
+        android:inputType="textMultiLine"
+        android:maxLength="200"
+
         android:padding="12dp"
         android:gravity="top|start"
         style="@style/Paragraph_Medium"
         android:textColor="@color/primary3"
         android:hint="어떤 오류가 발생했나요?"
         android:textColorHint="@color/red_gray_400"
-        android:inputType="textMultiLine"
-        android:maxLength="300"
 
         android:background="@drawable/shape_error_report_bg"/>
 
